--- a/EmCal Academy/public/HTML/Home.html
+++ b/EmCal Academy/public/HTML/Home.html
@@ -76,10 +76,16 @@
             </li>
           </button>
           <a href="../HTML/SIGNIN.HTML"> <button type="button" class="signup">
-              <li>signup</li>
+              <li>
+                <i class='bx bxs-door-open'></i>
+                <p>signup</p>
+              </li>
             </button></a>
           <a href="../HTML/LOGIN.HTML"><button type="button" class="login">
-              <li>login</li>
+              <li>
+                <i class='bx bxs-door-open'></i>
+                <p>login</p>
+              </li>
             </button></a>
         </ul>
       </div>
