--- a/EmCal Academy/public/HTML/Home.html
+++ b/EmCal Academy/public/HTML/Home.html
@@ -22,7 +22,7 @@
 
     .swiper .left {
       position: absolute;
-      top: 50%;
+      top: 30%;
     }
 
     .swiper-wrapper {
@@ -98,10 +98,12 @@
     <!-- Swiper -->
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="../pic/math.jpeg" alt=""></div>
-        <div class="swiper-slide"><img src="../pic/math.jpeg" alt=""></div>
-        <div class="swiper-slide"><img src="../pic/math.jpeg" alt=""></div>
-        <div class="swiper-slide"><img src="../pic/math.jpeg" alt=""></div>
+        <div class="swiper-slide"><img src="../pic/hero_01.jpeg" alt=""></div>
+        <div class="swiper-slide"><img src="../pic/hero_02.jpeg" alt=""></div>
+        <div class="swiper-slide"><img src="../pic/hero_03.jpeg" alt=""></div>
+        <!-- 
+          <div class="swiper-slide"><img src="../pic/hero_04.jpeg" alt=""></div>
+        -->
       </div>
 
       <div class="left">
@@ -122,18 +124,6 @@
 
 
 
-    <div class="hero">
-      <div class="left">
-        <p> EmCal Academy seeks students of good character who have exhibited both the motivation and ability to succeed
-          in a challenging college preparatory course of study. It is also important to us that our students understand,
-          respect, and embrace the philosophy of Gunston, and possess the talents, motivation, and interest to
-          contribute to our dynamic community.</p>
-      </div>
-
-      <div class="right">
-        <img src="../pic/girl.png" alt="">
-      </div>
-    </div>
 
 
 
