--- a/EmCal Academy/public/HTML/Home.html
+++ b/EmCal Academy/public/HTML/Home.html
@@ -123,43 +123,85 @@
     </div>
 
 
+    <section class="about">
+      <div class="top">
+        <h1>About</h1>
+      </div>
+      <div class="bottom">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, explicabo
+          exercitationem quisquam, corporis a voluptate voluptates consequuntur nostrum quos ipsa
+          at! At voluptatem magni tenetur praesentium, autem sit dicta eius.
+        </p>
+      </div>
+    </section>
+
+
+    <section class="features">
+      <div class="top">
+        <h1>Features</h1>
+      </div>
+      <div class="bottom">
+        <div class="box">
+          <h4>Scholarship</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa facilis tenetur veniam cumque veritatis
+            dolores fuga culpa officia fugiat. Expedita quis fuga non nulla itaque eveniet dolores beatae quia! Et?
+
+          </p>
+        </div>
+        <div class="box">
+          <h4>Scholarship</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa facilis tenetur veniam cumque veritatis
+            dolores fuga culpa officia fugiat. Expedita quis fuga non nulla itaque eveniet dolores beatae quia! Et?
+
+          </p>
+        </div>
+        <div class="box">
+          <h4>Scholarship</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa facilis tenetur veniam cumque veritatis
+            dolores fuga culpa officia fugiat. Expedita quis fuga non nulla itaque eveniet dolores beatae quia! Et?
+
+          </p>
+        </div>
+      </div>
+    </section>
+
+  </main>
 
 
 
+  <script src="../JS/Home.JS"></script>
+  <script src="../JS/authSystem.js"></script>
+
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      spaceBetween: 30,
+      centeredSlides: true,
+      autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+    });
+  </script>
 
 
-    <script src="../JS/Home.JS"></script>
-    <script src="../JS/authSystem.js"></script>
-
-    <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-    <!-- Initialize Swiper -->
-    <script>
-      var swiper = new Swiper(".mySwiper", {
-        spaceBetween: 30,
-        centeredSlides: true,
-        autoplay: {
-          delay: 2500,
-          disableOnInteraction: false,
-        },
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-      });
-    </script>
-
-
-    <!--
+  <!--
       Swiper JS
     -->
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 
 
