--- a/EmCal Academy/public/HTML/Home.html
+++ b/EmCal Academy/public/HTML/Home.html
@@ -129,9 +129,10 @@
       </div>
       <div class="bottom">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, explicabo
-          exercitationem quisquam, corporis a voluptate voluptates consequuntur nostrum quos ipsa
-          at! At voluptatem magni tenetur praesentium, autem sit dicta eius.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid soluta dolorum veniam tenetur voluptatibus
+          vel eveniet ipsum quidem necessitatibus, quisquam in ut at doloremque optio vero quia molestias commodi ipsam
+          nam reiciendis, voluptas consectetur laborum! Maiores quaerat itaque quas, aliquid voluptas eius ratione illum
+          a qui. Velit praesentium laboriosam blanditiis?
         </p>
       </div>
     </section>
@@ -150,14 +151,14 @@
           </p>
         </div>
         <div class="box">
-          <h4>Scholarship</h4>
+          <h4>Tutorial</h4>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa facilis tenetur veniam cumque veritatis
             dolores fuga culpa officia fugiat. Expedita quis fuga non nulla itaque eveniet dolores beatae quia! Et?
 
           </p>
         </div>
         <div class="box">
-          <h4>Scholarship</h4>
+          <h4>Test/Competition</h4>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa facilis tenetur veniam cumque veritatis
             dolores fuga culpa officia fugiat. Expedita quis fuga non nulla itaque eveniet dolores beatae quia! Et?
 
@@ -167,6 +168,27 @@
     </section>
 
   </main>
+
+
+  <footer>
+    <div class="footer-cont">
+      <div class="top">
+        <div class="logo">
+          <img src="../pic/LogoMakerCa-1727696568810-removebg-preview.png" alt="">
+          <h3>Emcal Academy</h3>
+        </div>
+
+        <div class="phone">
+          <p>+234 701 852 7361</p>
+          <p>emcalacademy@gmail.com</p>
+        </div>
+      </div>
+
+      <div class="copy">
+        <p>&copy 2025 Emcal Academy</p>
+      </div>
+    </div>
+  </footer>
 
 
 
